# uniplanner

./: .flake8  Dockerfile  cspell.json  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: crud.py  main.py
app/api/controller/: api_router.py  event_router.py  plan_router.py
app/application/data_object/dto/event/: create_event_dto.py
app/application/data_object/dto/plan/: create_plan_dto.py
app/application/data_object/dto/schedule/: create_schedule_dto.py
app/application/data_object/view_model/event/: get_event_view_model.py
app/application/data_object/view_model/plan/: get_plan_view_model.py
app/application/data_object/view_model/schedule/: get_schedule_view_model.py
app/application/usecase/event/create_event/: create_event_usecase.py  i_create_event_usecase.py
app/database/: settings.py
app/domain/interfaces/repository/: eventRepositoryBase.py  planRepositoryBase.py
app/domain/models/: __init__.py  answer.py  base.py  event.py  plan.py  schedule.py  user.py
app/infrastructure/dataAccess/database/: settings.py
app/infrastructure/dataAccess/repository/: eventRepository.py  planRepository.py
app/models/: __init__.py  answer.py  base.py  plan.py  schedule.py  user.py
app/schemas/: answer.py  plan.py  schedule.py  user.py
db/: alembic.ini
db/dev/: env.py
db/dev/versions/: 0b5dafd7c762_.py  213cfcb6b4c4_.py  785a041b34cc_.py  f32cfb8d0d2a_.py
db/init/: 1_create_database.sql
scripts/backend/: postCreateCommand.sh
scripts/database/: al-migration.sh  al-upgrade.sh
(+6 files in other folders)
